# brightness

./: .gitignore  CMakeLists.txt  brightness.cpp
